# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.48 2004/05/17 01:21:17 zhen Exp $

  16 May 2004; John Davis <zhen@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/generic_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/stage1_target.py,
  modules/stage2_target.py, modules/stage3_target.py,
  modules/tinderbox_target.py, targets/stage1/stage1-preclean2-chroot.sh:
  finally parsed out targets.py. fixed gcc-config typo in stage1 the stage1 that
  caused gcc profile problems.

  12 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh, livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript-support/post-kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh, modules/catalyst_support.py,
  modules/targets.py:
  fixed default-runscript.sh so that it is easier to read (no more chroot >> EOF
  silliness). Most notably, I have taken advantage of the update-modules
  --assume-kernel fix from agriffis so that we can actually use 3rd party
  modules now. Please note that >=baselayout-1.9.0 is required.

  02 May 2004; Olivier Crete <tester@gentoo.org>
  arch/x86.py:
  Added forgotten CHOST for i386 subarch

  30 Apr 2004; John Davis <zhen@gentoo.org>
  livecd/cdtar/isolinux-2.08-cdtar.tar.bz2,
  livecd/cdtar/isolinux-2.08-memtest86+-cdtar.tar.bz2,
  livecd/cdtar/isolinux-2.08-memtest86-cdtar.tar.bz2,
  livecd/files/x86-help.msg, livecd/runscript/x86-archscript.sh:
  lots of changes
  -fixed 2004.0 branding in the isolinux cdtar
  -fixed up acpi stuff in the runscripts
  -fixed up the x86 help message and corrected the numerous errors in it

  26 Apr 2004; John Davis <zhen@gentoo.org> catalyst,
  livecd/runscript/default-runscript.sh: