@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.48 2004/05/17 01:21:17 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.49 2004/05/17 01:41:53 zhen Exp $
+
+  16 May 2004; John Davis <zhen@gentoo.org>
+  livecd/runscript-support/kmerge.sh, modules/livecd_stage2_target.py:
+  added a feature to the livecd-stage2 specfile called "livecd/genkernel_args"
+  for passing args to genkernel. gmsoft@gentoo.org requested this one.
 
   16 May 2004; John Davis <zhen@gentoo.org> catalyst,
   modules/catalyst_support.py, modules/embedded_target.py,
